Fix conference page and links to main conference pages and schedule.

--- a/_posts/2008-09-03-code4lib-2009.md
+++ b/_posts/2008-09-03-code4lib-2009.md
@@ -4,6 +4,7 @@ categories:
 - code4lib 2009
 layout: page
 title: Code4Lib 2009
+permalink: /conference/2009
 created: 1220464222
 ---
 <div class="content" xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#" xmlns:swc="http://data.semanticweb.org/ns/swc/ontology#" about="http://code4lib.org/2009#conference" typeof="swc:ConferenceEvent">
