--- a/_posts/2009-07-10-code4lib-2010.md
+++ b/_posts/2009-07-10-code4lib-2010.md
@@ -4,6 +4,7 @@ categories:
 - code4lib 2010
 layout: page
 title: Code4Lib 2010
+permalink: /conference/2010
 created: 1247240872
 ---
 <h3><strong>Monday, February 22nd - Thursday, February 25th, 2010, Asheville, North Carolina</strong></h3>
