--- a/_posts/2011-07-28-code4lib-2012.md
+++ b/_posts/2011-07-28-code4lib-2012.md
@@ -4,6 +4,7 @@ categories:
 - code4lib 2012
 layout: page
 title: Code4Lib 2012
+permalink: /conference/2012
 created: 1311872272
 ---
 <p><a href="http://wiki.code4lib.org/index.php/2012_Lightning_Talks_Signup">Sign-up for Lightning Talks</a></p>
