--- a/_posts/2012-11-02-code4lib-2013.md
+++ b/_posts/2012-11-02-code4lib-2013.md
@@ -3,11 +3,12 @@ categories:
 - code4lib 2013
 layout: page
 title: Code4Lib 2013
+permalink: /conference/2013
 created: 1351895810
 ---
 <h2>The Basics</h2>
 <hr />
-<h3><a href="http://code4lib.org/conference/2013/schedule">Schedule (HTML)</a> | <a href="https://dl.dropbox.com/u/55136090/Code4Lib2013%20Program.pdf">Schedule (PDF) | <a href="http://lanyrd.com/2013/c4l13/">Schedule (Lanyrd)</a></h3>
+<h3><a href="http://code4lib.org/conference/2013/schedule">Schedule (HTML)</a> | <a href="https://dl.dropbox.com/u/55136090/Code4Lib2013%20Program.pdf">Schedule (PDF)</a> | <a href="http://lanyrd.com/2013/c4l13/">Schedule (Lanyrd)</a></h3>
 
 <hr />
 <h3>Streaming URL : <a href="http://bit.ly/c4l13-stream">http://bit.ly/c4l13-stream</a></h3>
@@ -28,7 +29,7 @@ created: 1351895810
 <h2>Conference Info</h2>
 <h3>Registration</h3>
 <p>Registration for Code4lib 2013 <strong>was closed</strong> as of Thursday, January 31. (Registration was $160 and registration was capped at 400 people.)</p>
-<h3><a href="http://code4lib.org/conference/2013/schedule">Schedule (HTML)</a> | <a href="https://dl.dropbox.com/u/55136090/Code4Lib2013%20Program.pdf">Schedule (PDF)</h3>
+<h3><a href="http://code4lib.org/conference/2013/schedule">Schedule (HTML)</a> | <a href="https://dl.dropbox.com/u/55136090/Code4Lib2013%20Program.pdf">Schedule (PDF)</a></h3>
 <p><a href="http://wiki.code4lib.org/index.php/2013_preconference_proposals">Pre-conference sign up</a></p>
 <p><a href="http://lanyrd.com/2013/c4l13/">Lanyrd page for the conference</a></p>
 <p><a href="http://lanyrd.com/2013/c4l13/save-to-calendar/">Save the schedule to your calendar</a></p>
@@ -39,7 +40,7 @@ created: 1351895810
 <h3>New to code4lib?</h3>
 <p><a href="http://wiki.code4lib.org/index.php/2013_social_activities#Newcomer_Dinner.2C_Tuesday_2.2F12">Come to dinner on Tuesday</a></p>
 <p><a href="http://wiki.code4lib.org/index.php/How_to_hack_code4lib">Hacking code4lib</a></p>
-<p><a href="https://github.com/code4lib/antiharassment-policy/blob/master/code_of_conduct.md">Code of Conduct</a</p>
+<p><a href="https://github.com/code4lib/antiharassment-policy/blob/master/code_of_conduct.md">Code of Conduct</a></p>
 <p><a href="http://wiki.code4lib.org/index.php/Zoia_or_the_Code4Lib_IRC_bot">IRCbot</a></p>
 
 
@@ -64,7 +65,7 @@ created: 1351895810
 <p>Call or book online:</p>
 <ul>
   <li><a href="http://www.flashcab.com">Flash Cab</a>: <a href="tel:7735614444">(773) 561-4444</a></li>
-  <li><a href="http://www.yellowcabchicago.com/">Yellow Cab</a>: <a href="tel:3128294222">(312) TAXICAB</a>
+  <li><a href="http://www.yellowcabchicago.com/">Yellow Cab</a>: <a href="tel:3128294222">(312) TAXICAB</a></li>
   <li><a href="http://www.chicagocarriagecab.com/">Chicago Carriage</a>: <a href="tel:3123262221">(312) 326-CAB1</a></li>
 </ul>
 <strong>Walking</strong>
