--- a/_posts/2013-09-30-code4lib-2014.md
+++ b/_posts/2013-09-30-code4lib-2014.md
@@ -17,6 +17,7 @@ categories:
 - code4lib 2014
 layout: page
 title: Code4Lib 2014
+permalink: /conference/2014
 created: 1380556321
 ---
 Code4Lib 2014 will be held at the <a href="http://www.sheratonraleigh.com/">Sheraton Raleigh Hotel</a> in downtown Raleigh, NC on March 24 - 27, 2014. 
