--- a/_posts/2014-07-02-code4lib-2015.md
+++ b/_posts/2014-07-02-code4lib-2015.md
@@ -4,6 +4,7 @@ categories:
 - code4lib 2015
 layout: page
 title: Code4Lib 2015
+permalink: /conference/2015
 created: 1404330523
 ---
 Code4Lib 2015 will be held at the [Hilton Portland & Executive Tower](http://www3.hilton.com/en/hotels/oregon/hilton-portland-and-executive-tower-PDXPHHH/index.html) in downtown Portland, OR on February 9 - 12, 2015. 
