--- a/_posts/2016-10-13-code4lib-2017.md
+++ b/_posts/2016-10-13-code4lib-2017.md
@@ -3,6 +3,7 @@ categories:
 - conferences
 layout: page
 title: Code4Lib 2017
+permalink: /conference/2017
 created: 1476385755
 ---
 <a href="http://2017.code4lib.org"><img width="600" height="185" src="/files/20161219203056%21Lrl_c4l_palms_1.png" title="Code4Lib 2017 conference site" /></a>
