--- a/_posts/2015-08-10-code4lib-2016.md
+++ b/_posts/2015-08-10-code4lib-2016.md
@@ -3,6 +3,7 @@ categories:
 - code4lib2016
 layout: page
 title: Code4Lib 2016
+permalink: /conference/2016
 created: 1439239025
 ---
 The [Code4Lib 2016](http://2016.code4lib.org) Philadelphia Committee is pleased to announce that we have finalized the dates and location of the [2016 conference](http://2016.code4lib.org).
