--- a/_posts/2017-08-08-code4lib-2018.md
+++ b/_posts/2017-08-08-code4lib-2018.md
@@ -3,6 +3,7 @@ categories:
 - conferences
 layout: story
 title: Code4Lib 2018
+permalink: /conference/2018
 created: 1502230044
 ---
 Code4Lib 2018 will be held from February 13-16, 2018, in Washington, D.C.
