Set up config file, header with external links. Add or fix permalinks.

--- a/_posts/2006-02-24-chat.md
+++ b/_posts/2006-02-24-chat.md
@@ -3,6 +3,7 @@ categories:
 - irc
 layout: page
 title: Chat
+permalink: /irc/
 created: 1140811721
 ---
 There are code4lib chat rooms for folks who are interested in the convergence of technology and cultural heritage. These are less formal and more interactive alternative to the code4lib mailing list for the discussion of code, projects, ideas, music, first computers, etc.
