Adjust permalinks to use directory for each conf year.

--- a/_posts/2005-11-21-code4lib-2006.md
+++ b/_posts/2005-11-21-code4lib-2006.md
@@ -12,7 +12,7 @@ categories:
 - code4lib 2006
 layout: page
 title: code4lib 2006
-permalink: /conference/2006
+permalink: /conference/2006/
 created: 1132643273
 ---
 <strong>code4lib 2006 is...</strong>
