--- a/_posts/2008-09-03-code4lib-2009.md
+++ b/_posts/2008-09-03-code4lib-2009.md
@@ -4,12 +4,12 @@ categories:
 - code4lib 2009
 layout: page
 title: Code4Lib 2009
-permalink: /conference/2009
+permalink: /conference/2009/
 created: 1220464222
 ---
 <div class="content" xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#" xmlns:swc="http://data.semanticweb.org/ns/swc/ontology#" about="http://code4lib.org/2009#conference" typeof="swc:ConferenceEvent">
 
-For video of conference presentations see <a href="/conference/2009/schedule">conference schedule</a>; for video of lightning talks see <a href="/conference/2009/lightning">list of lightning talks</a>. 
+For video of conference presentations see <a href="/conference/2009/schedule">conference schedule</a>; for video of lightning talks see <a href="/conference/2009/lightning">list of lightning talks</a>.
 
 <h3><strong>February 23 - 26, 2009, Providence, Rhode Island, USA</strong></h3>
 
@@ -48,7 +48,7 @@ Cancellations before January 23, 2009 will receive a refund of the registration 
 <ul><li>
 <h3><strong>Location / Hotel</strong></h3>
 The conference will be held at the <a href="http://www.marriott.com/hotels/travel/pvdbr?groupCode=blablaa&app=resvlink&fromDate=2/22/09&toDate=2/26/09 ">Renaissance Providence Hotel</a>, 5 Avenue of the Arts, Providence, RI.  (set GPS navigator to 120 Francis Street).
-Room rate will be <strong>$135</strong> (including free internet access in guest rooms).  A link to hotel reservations will be available on the conference registration form. Reservations must be made by February 10, 2009 to be eligible for the discounted rate; this rate will be available for 3 days before and 3 days after the official conference dates of February 22 - 26. 
+Room rate will be <strong>$135</strong> (including free internet access in guest rooms).  A link to hotel reservations will be available on the conference registration form. Reservations must be made by February 10, 2009 to be eligible for the discounted rate; this rate will be available for 3 days before and 3 days after the official conference dates of February 22 - 26.
 <strong>NOTE:</strong> As of 1/12/09, the code4lib discounted block is sold out.  Rooms are still available at $219/night.  See the <a href="http://wiki.code4lib.org/index.php/RoommatesRidesEtc#Alternate_Housing">wiki</a> for alternate housing options.
 <p>A <a href="http://wiki.code4lib.org/index.php/RoommatesRidesEtc">wiki page</a> has been created to assist in locating roommates and rides or collaborating on sightseeing and other social activities.</p>
 </li></ul>
@@ -59,8 +59,8 @@ Providence is a compact, walkable city; once you arrive it&rsquo;s fairly easy t
 <p>&nbsp;</p>
 <strong>AIR</strong>
 <ul><li>
-<p><a href="http://www.pvdairport.com/">T F Green Airport (PVD)</a>  &ndash; Located in Warwick RI, the airport is 15 minutes from Providence.  Because Southwest is one of the carriers, fares tend to be good.  Also, it's a smallish airport, so getting around and through is relatively pain-free. 
-<u>Ground transportation</u>: 
+<p><a href="http://www.pvdairport.com/">T F Green Airport (PVD)</a>  &ndash; Located in Warwick RI, the airport is 15 minutes from Providence.  Because Southwest is one of the carriers, fares tend to be good.  Also, it's a smallish airport, so getting around and through is relatively pain-free.
+<u>Ground transportation</u>:
 <ul><li>RI Public Transit Authority - <a href="http://www.ripta.com/schedules/view.php?route=14&amp;direction=1">RIPTA bus #14</a> runs every hour or so from T F Green to Kennedy Plaza. $1.75.</li>
 <li>Shuttle &ndash; <a href="http://www.airporttaxiri.com/schedule/index.html">Airport Taxi Limo</a> leaves hourly on the hour from TF Green 5AM to 10PM; get off at the Courtyard or Westin Hotel, both a very short walk to the Renaissance.  $11.</li>
 
@@ -69,8 +69,8 @@ Providence is a compact, walkable city; once you arrive it&rsquo;s fairly easy t
 
 <li>
 
-<a href="http://www.massport.com/logan/default.aspx">Logan Airport (BOS)</a>   &ndash;Boston&rsquo;s airport is about an hour from Providence when conditions are good. 
-<u>Ground transportation</u>: 
+<a href="http://www.massport.com/logan/default.aspx">Logan Airport (BOS)</a>   &ndash;Boston&rsquo;s airport is about an hour from Providence when conditions are good.
+<u>Ground transportation</u>:
 <ul>
 <li> MBTA public transportation: <a href="http://www.mbta.com/schedules_and_maps/bus/routes/?route=SL1">Silver Line bus</a> to South Station , leaves about every 10 minutes, $1.50; then get the commuter rail for $7.75. (see below) </li>
 
@@ -79,7 +79,7 @@ Providence is a compact, walkable city; once you arrive it&rsquo;s fairly easy t
 </ul>
 </ul>
 <p>&nbsp;</p>
-<strong>TRAIN</strong> 
+<strong>TRAIN</strong>
 The Providence station is just a 5 minute walk to the Renaissance Hotel.
 <ul>
 <li><a href="http://www.amtrak.com">Amtrak Rail Service</a> &ndash;	Providence is served by Amtrak&rsquo;s Acela and Northeast Corridor routes.  </li>
@@ -87,12 +87,12 @@ The Providence station is just a 5 minute walk to the Renaissance Hotel.
 <li>Commuter Rail from Boston and Rte. 128. &ndash; <a href="http://www.mbta.com/schedules_and_maps/rail/lines/?route=PROVSTOU">Providence/Stoughton Line</a> to Providence  station.     $7.75  </li>
 </ul>
 <p>&nbsp;</p>
-<strong>BUS</strong> 
+<strong>BUS</strong>
 <ul>
 <li><a href="http://www.peterpanbus.com">Peter Pan Buslines</a> from Boston South Station $8-10, 1 hour to Kennedy Plaza (10 minutes to Renaissance). </li>
 </ul>
 <p>&nbsp;</p>
-<p><strong>CAR</strong> 
+<p><strong>CAR</strong>
 Overnight parking on city streets is not permitted. The Renaissance Hotel has valet parking with in/out service for $25 daily. Other nearby lots and their 24 hour rates are: Providence Place Mall (Hayes St. entrance, $25), GTech Center Parking Garage (10 Memorial Blvd, $20), Union Station Plaza Garage (5 Memorial Blvd, $20), RI Convention Center (99 West Exchange St, $18).
 
 From the South or North on Interstate 95 (Input 120 Francis Street in GPS systems):
