--- a/_posts/2009-07-10-code4lib-2010.md
+++ b/_posts/2009-07-10-code4lib-2010.md
@@ -4,7 +4,7 @@ categories:
 - code4lib 2010
 layout: page
 title: Code4Lib 2010
-permalink: /conference/2010
+permalink: /conference/2010/
 created: 1247240872
 ---
 <h3><strong>Monday, February 22nd - Thursday, February 25th, 2010, Asheville, North Carolina</strong></h3>
@@ -35,7 +35,7 @@ href="http://www.farecompare.com/maps/myAirportCategoryMap.html?departure=AVL&ca
 </ul>
 <div><i>Car (<a href="http://www.exploreasheville.com/local-info/mileage/index.aspx">driving distances</a>)</i></div>
 <ul>
-<li><a href="http://en.wikipedia.org/wiki/Interstate_40">Interstate 40</a> - A major east/west interstate highway which connects to I-85 and 
+<li><a href="http://en.wikipedia.org/wiki/Interstate_40">Interstate 40</a> - A major east/west interstate highway which connects to I-85 and
 I-95</li>
 <li><a href="http://en.wikipedia.org/wiki/Interstate_26">Interstate 26</a> - A regional east/west-north/south highway serving TN, SC, and NC</li>
 </ul>
@@ -52,7 +52,7 @@ I-95</li>
 To participate in planning, see <a href="http://groups.google.com/group/code4libcon">the community's conference planning listserv</a> and <a href="http://wiki.code4lib.org/index.php/Category:Code4Lib2010">wiki</a>.
 
 <em>Sponsorships</em>
-We are looking for additional sponsors to help keep registration affordable. 
+We are looking for additional sponsors to help keep registration affordable.
 
 <em>Scholarships</em>
 Check back for more information: We expect to have several scholarships. Or, contact the organizing committee if you'd like to sponsor a scholarship!
@@ -63,4 +63,4 @@ Kevin Clarke (Appalachian State University)
 Lynne Lysiak (Appalachian State University)
 Jodi Schneider (DERI, National University of Ireland, Galway)
 Barbara Svenson (University of North Carolina - Asheville)
-Gillian Ellern (Western Carolina University) 
+Gillian Ellern (Western Carolina University)
