--- a/_posts/2011-07-28-code4lib-2012.md
+++ b/_posts/2011-07-28-code4lib-2012.md
@@ -4,7 +4,7 @@ categories:
 - code4lib 2012
 layout: page
 title: Code4Lib 2012
-permalink: /conference/2012
+permalink: /conference/2012/
 created: 1311872272
 ---
 <p><a href="http://wiki.code4lib.org/index.php/2012_Lightning_Talks_Signup">Sign-up for Lightning Talks</a></p>
@@ -69,7 +69,7 @@ Code4Lib thanks the following sponsors for their generous commitments:
 
 <strong>Platinum</strong> <a href="http://www.exlibrisgroup.com/category/Home">Ex Libris</a>; <a href="http://www.indiana.edu/">Indiana University</a>/<a href="http://kuali.org/">Kuali Foundation</a>; <a href="http://www.oclc.org">OCLC</a>; <a href="http://oregonstate.edu">Oregon State University</a>
 
-<strong>Gold</strong> <a href="http://www.diglib.org/">Digital Library Federation</a>; <a href="http://www.elsevier.com">Elsevier B.V.</a>; <a href="http://psu.edu">Penn State University</a> 
+<strong>Gold</strong> <a href="http://www.diglib.org/">Digital Library Federation</a>; <a href="http://www.elsevier.com">Elsevier B.V.</a>; <a href="http://psu.edu">Penn State University</a>
 
 <strong>Silver</strong> <a href="http://indexdata.com">Index Data</a>; <a href="http://iii.com">Innovative Interfaces</a>; <a href="http://www.lyrasis.org/">Lyrasis</a>; <a href="http://research.microsoft.com/en-us/">Microsoft Research</a>; <a href="www.serialssolutions.com/">Serials Solutions</a>
 
