--- a/_posts/2014-07-02-code4lib-2015.md
+++ b/_posts/2014-07-02-code4lib-2015.md
@@ -4,10 +4,10 @@ categories:
 - code4lib 2015
 layout: page
 title: Code4Lib 2015
-permalink: /conference/2015
+permalink: /conference/2015/
 created: 1404330523
 ---
-Code4Lib 2015 will be held at the [Hilton Portland & Executive Tower](http://www3.hilton.com/en/hotels/oregon/hilton-portland-and-executive-tower-PDXPHHH/index.html) in downtown Portland, OR on February 9 - 12, 2015. 
+Code4Lib 2015 will be held at the [Hilton Portland & Executive Tower](http://www3.hilton.com/en/hotels/oregon/hilton-portland-and-executive-tower-PDXPHHH/index.html) in downtown Portland, OR on February 9 - 12, 2015.
 
 Pre-conferences will be held Monday February 9, and the main conference on February 10 - 12.
 
@@ -39,15 +39,15 @@ The Social Activities Group has identified several events and social opportuniti
 
 **Registration**
 
-Registration is now **closed** and **sold out** for the main conference; pre-conference registration will remain open. Registration fees will be $175 for the main conference, $30 for preconference ($15 for half day), and will be capped between 450 and 500. 
+Registration is now **closed** and **sold out** for the main conference; pre-conference registration will remain open. Registration fees will be $175 for the main conference, $30 for preconference ($15 for half day), and will be capped between 450 and 500.
 
 Please register here:  <a href="http://c4l2015.eventbrite.com">http://c4l2015.eventbrite.com</a>
 
 **Hotel**
 
-The [Hilton Portland & Executive Tower](http://www3.hilton.com/en/hotels/oregon/hilton-portland-and-executive-tower-PDXPHHH/index.html) is located conveniently in downtown Portland, near public transit lines. 
+The [Hilton Portland & Executive Tower](http://www3.hilton.com/en/hotels/oregon/hilton-portland-and-executive-tower-PDXPHHH/index.html) is located conveniently in downtown Portland, near public transit lines.
 
-_The block room rate will be $139_ for a single or double room. 
+_The block room rate will be $139_ for a single or double room.
 
 The block rate is available from Sunday, February 8th - Thursday, February 12th.
 
@@ -55,7 +55,7 @@ If you'd like to extend your stay, we encourage you to call the Hilton Portland 
 
 Please use this <a href="https://resweb.passkey.com/Resweb.do?mode=welcome_ei_new&eventID=11714845">link</a> for reservations during the times listed above.  
 
-Alternately, you can book on <a href="http://www3.hilton.com/en/index.html">www.hilton.com</a> and use the code __OUS__ to make a discounted reservation. 
+Alternately, you can book on <a href="http://www3.hilton.com/en/index.html">www.hilton.com</a> and use the code __OUS__ to make a discounted reservation.
 
 **[Diversity Scholarships](/conference/2015/scholarships)**
 
