--- a/_posts/2015-08-10-code4lib-2016.md
+++ b/_posts/2015-08-10-code4lib-2016.md
@@ -3,7 +3,7 @@ categories:
 - code4lib2016
 layout: page
 title: Code4Lib 2016
-permalink: /conference/2016
+permalink: /conference/2016/
 created: 1439239025
 ---
 The [Code4Lib 2016](http://2016.code4lib.org) Philadelphia Committee is pleased to announce that we have finalized the dates and location of the [2016 conference](http://2016.code4lib.org).
@@ -18,4 +18,4 @@ Also, our Sponsorship Committee is actively looking for sponsors for 2016, so pl
 
 It’s shaping up to be a great conference this year, and there will be lots more opportunities to volunteer. Our team is looking forward to seeing you on March 7!
 
-The Code4Lib 2016 Philadelphia Committee 
+The Code4Lib 2016 Philadelphia Committee
