--- a/_posts/2016-10-13-code4lib-2017.md
+++ b/_posts/2016-10-13-code4lib-2017.md
@@ -3,7 +3,7 @@ categories:
 - conferences
 layout: page
 title: Code4Lib 2017
-permalink: /conference/2017
+permalink: /conference/2017/
 created: 1476385755
 ---
 <a href="http://2017.code4lib.org"><img width="600" height="185" src="/files/20161219203056%21Lrl_c4l_palms_1.png" title="Code4Lib 2017 conference site" /></a>
@@ -14,4 +14,4 @@ More information about this year's conference is available on the  <a href="http
 
 It’s shaping up to be a great conference this year, and there will be lots more opportunities to volunteer. Our team is looking forward to seeing you on March 6!
 
-~ The Code4Lib 2017 Los Angeles Committee 
+~ The Code4Lib 2017 Los Angeles Committee
