--- a/_posts/2012-11-02-code4lib-2013.md
+++ b/_posts/2012-11-02-code4lib-2013.md
@@ -3,7 +3,7 @@ categories:
 - code4lib 2013
 layout: page
 title: Code4Lib 2013
-permalink: /conference/2013
+permalink: /conference/2013/
 created: 1351895810
 ---
 <h2>The Basics</h2>
