--- a/_posts/2013-09-30-code4lib-2014.md
+++ b/_posts/2013-09-30-code4lib-2014.md
@@ -17,11 +17,11 @@ categories:
 - code4lib 2014
 layout: page
 title: Code4Lib 2014
-permalink: /conference/2014
+permalink: /conference/2014/
 created: 1380556321
 ---
-Code4Lib 2014 will be held at the <a href="http://www.sheratonraleigh.com/">Sheraton Raleigh Hotel</a> in downtown Raleigh, NC on March 24 - 27, 2014. 
- 
+Code4Lib 2014 will be held at the <a href="http://www.sheratonraleigh.com/">Sheraton Raleigh Hotel</a> in downtown Raleigh, NC on March 24 - 27, 2014.
+
 Pre-conferences will be held Monday March 24, and the main conference on Tuesday March 25 - 27.
 
 <strong>See the <a href="/conference/2014/schedule">2014 Conference Schedule</a> for the full schedule.</strong>
@@ -30,7 +30,7 @@ Pre-conferences will be held Monday March 24, and the main conference on Tuesday
 
 <h3>Keynote Speakers</h3>
 
-Ideas for keynote speakers were solicited and voted on. You can <a href="http://vote.code4lib.org/election/results/27">view the results</a> of the voting if you login. We are thrilled to have the two speakers who received the most votes: <b>Valerie Aurora</b>, the founder of the Ada Initiative, and <b>Sumana Harihareswara</b>, Engineering Community Manager, Wikimedia Foundation keynote this year. <a href="http://code4lib.org/node/490">See the announcement</a> for more information. 
+Ideas for keynote speakers were solicited and voted on. You can <a href="http://vote.code4lib.org/election/results/27">view the results</a> of the voting if you login. We are thrilled to have the two speakers who received the most votes: <b>Valerie Aurora</b>, the founder of the Ada Initiative, and <b>Sumana Harihareswara</b>, Engineering Community Manager, Wikimedia Foundation keynote this year. <a href="http://code4lib.org/node/490">See the announcement</a> for more information.
 
 <h3>Sponsors</h3>
 
@@ -38,9 +38,9 @@ Financial contributions from <a href="http://www.code4lib.org/conference/2014/sp
 
 <h3>Hunt Library Reception (NCSU)</h3>
 
-As part of conference activities, NCSU is sponsoring busing for conference attendees to visit the new <a href="http://www.lib.ncsu.edu/huntlibrary">Hunt Library</a> building on Centennial Campus.  This activity is planned for 5:00pm -7:30pm on Tuesday, March 25. A light reception will be available (NC State beer and pizza) and there will be tour staff posted throughout the library to provide more info about the technology and spaces. 
+As part of conference activities, NCSU is sponsoring busing for conference attendees to visit the new <a href="http://www.lib.ncsu.edu/huntlibrary">Hunt Library</a> building on Centennial Campus.  This activity is planned for 5:00pm -7:30pm on Tuesday, March 25. A light reception will be available (NC State beer and pizza) and there will be tour staff posted throughout the library to provide more info about the technology and spaces.
 
-Buses to Hunt Library will leave the Sheraton intermittently between 5:00pm and 5:45pm.  Return buses will depart intermittently from Hunt Library between 6:45pm and 7:30pm." 
+Buses to Hunt Library will leave the Sheraton intermittently between 5:00pm and 5:45pm.  Return buses will depart intermittently from Hunt Library between 6:45pm and 7:30pm."
 
 <h3>Webcast</h3>
 
@@ -107,7 +107,7 @@ The Triangle Transit Authority also provides a fairly direct <a href="http://www
 
 <a href="http://www.rdu.com/groundtrans/taxis.html">Taxi service</a> is easily available just outside baggage claim and is also commonly used.  
 
-For more details about the area, see the <a href="https://docs.google.com/a/ncsu.edu/document/d/1amxzn4xs26ILszZek5nIEEfd4qHNfLjp1BAc5CU5YKw/edit">hosting proposal</a>. 
+For more details about the area, see the <a href="https://docs.google.com/a/ncsu.edu/document/d/1amxzn4xs26ILszZek5nIEEfd4qHNfLjp1BAc5CU5YKw/edit">hosting proposal</a>.
 
 <h4>Code of Conduct</h4>
 
@@ -134,7 +134,7 @@ All presenters have been notified as to whether their talk was accepted. A <a hr
 
 Pre-conferences are full- or half-day sessions that will be held on Monday, March 24th, 2014 and can cover just about any topic you can think of [1].
 
-Pre-conference proposals are available on the <a href="http://wiki.code4lib.org/index.php/2014_preconference_proposals">wiki</a>. 
+Pre-conference proposals are available on the <a href="http://wiki.code4lib.org/index.php/2014_preconference_proposals">wiki</a>.
 
 Registration for pre-conferences will be handled as part of the overall conference registration, and will involve a small fee (see above).
 
