initial work to fix some of the 2006 schedule pages

--- a/_posts/2006-01-10-wikid.md
+++ b/_posts/2006-01-10-wikid.md
@@ -13,6 +13,7 @@ categories:
 layout: page
 title: WikiD
 created: 1136909981
+permalink: /conference/2006/young
 ---
 <a href="http://www.oclc.org/research/staff/young.htm">Jeffrey A. Young</a>
 
