More link fixes for 2006 conference content

--- a/_posts/2005-11-21-code4lib-2006.md
+++ b/_posts/2005-11-21-code4lib-2006.md
@@ -39,9 +39,9 @@ Free wireless nets are available at both the conference venue and the hotel</dd>
 
 
 <dt><strong>Conference Schedule</strong></dt>
-<dd>Presentations are being added to the <a href="/2006/schedule">Conference Schedule</a> as we receive them.</dd>
+<dd>Presentations are being added to the <a href="/conference/2006/schedule">Conference Schedule</a> as we receive them.</dd>
 
-<dd>The final list of <a href="/2006/lightning">Lightning Talks</a> and <a href="/2006/breakouts">Breakout Sessions</a> are also available.</dd>
+<dd>The final list of <a href="/conference/2006/lightning">Lightning Talks</a> and <a href="/conference/2006/breakouts">Breakout Sessions</a> are also available.</dd>
 
 <dt><strong>Registration</strong></dt>
 
@@ -71,7 +71,7 @@ Fly into either:
 <ul>
 <li>Portland Airport (PDX) &#151; There is <a href="http://www.hutshuttle.com/">shuttle service</a> for $43 each way, direct to the hotel. (Choose the 'Corvallis' option from the shuttle website for the shuttle schedule) (Some people have reported that the web site reservation didn't work, and they had to call through.)</li>
 <li>Eugene Airport (EUG) &#151; <a href="http://www.oregon.com/transportation/eugene_airport.cfm">shuttle options</a></li>
-<li>There is some <a href="http://www.code4lib.org/2006/carpooling">carpooling</a></li>
+<li>There is some <a href="/conference/2006/carpooling">carpooling</a></li>
 </ul>
 </dd>
 
@@ -99,6 +99,6 @@ Fly into either:
 <hr />
 <strong>Historical</strong>
 <ul>
-<li><a href="/2006/proposals">Call for Proposals</a></li>
+<li><a href="/conference/2006/proposals">Call for Proposals</a></li>
 <li><a href="http://roytennant.com/dchud.jpg">Some foolishness that occurred during the conference</a></li>
 </ul>
