Add ending slash to permalinks.

--- a/_posts/2005-11-21-code4lib-2006.md
+++ b/_posts/2005-11-21-code4lib-2006.md
@@ -71,7 +71,7 @@ Fly into either:
 <ul>
 <li>Portland Airport (PDX) &#151; There is <a href="http://www.hutshuttle.com/">shuttle service</a> for $43 each way, direct to the hotel. (Choose the 'Corvallis' option from the shuttle website for the shuttle schedule) (Some people have reported that the web site reservation didn't work, and they had to call through.)</li>
 <li>Eugene Airport (EUG) &#151; <a href="http://www.oregon.com/transportation/eugene_airport.cfm">shuttle options</a></li>
-<li>There is some <a href="/conference/2006/carpooling">carpooling</a></li>
+<li>There is some carpooling [link removed]</li>
 </ul>
 </dd>
 
