--- a/_posts/2006-01-10-wikid.md
+++ b/_posts/2006-01-10-wikid.md
@@ -13,7 +13,7 @@ categories:
 layout: page
 title: WikiD
 created: 1136909981
-permalink: /conference/2006/young
+permalink: /conference/2006/young/
 ---
 <a href="http://www.oclc.org/research/staff/young.htm">Jeffrey A. Young</a>
 
@@ -40,4 +40,3 @@ Voice: 614-764-4342
 Voice: 800-848-5878, ext. 4342
 Fax: 614-718-7477
 Email: jyoung@oclc.org
-
