--- a/_posts/2007-12-27-pnrl.md
+++ b/_posts/2007-12-27-pnrl.md
@@ -5,6 +5,7 @@ categories:
 layout: page
 title: ÖpënÜRL
 created: 1198799024
+permalink: /conference/2008/singer/
 ---
 <b>Ross Singer</b> - Interoperability and Open Standards Champion, Talis<br />
 <b>Jonathan Rochkind</b> - Johns Hopkins University Libraries<br />
