--- a/_posts/2008-09-03-code4lib-2009.md
+++ b/_posts/2008-09-03-code4lib-2009.md
@@ -19,7 +19,7 @@ For video of conference presentations see <a href="/conference/2009/schedule">co
 
 <ul><li><h3><strong>Presentation Proposals</strong></h3>
 
-Voting to select the presentations for the 2009 Code4Lib conference is now closed. Results are here: <a href="http://vote.code4lib.org/election/results/7">http://vote.code4lib.org/election/results/7</a>. Accepted presentations are listed on the <a href="http://code4lib.org/conference/2009/schedule">draft schedule</a>.
+Voting to select the presentations for the 2009 Code4Lib conference is now closed. Results are here: <a href="http://vote.code4lib.org/election/results/7">http://vote.code4lib.org/election/results/7</a>. Accepted presentations are listed on the <a href="/conference/2009/schedule">draft schedule</a>.
 
 </li>
 </ul>
@@ -34,15 +34,15 @@ https://library.brown.edu/code4libcon09/registration/waitlist/</a>
 The conference is capped at 220 attendees.
 
 Registration fee is $125. Late registration, on or after Friday, January 30, is $175.
-Cancellations before January 23, 2009 will receive a refund of the registration fee; cancellations on or before February 20, 2009 will receive a refund minus a $45 administrative fee.</p>
+Cancellations before January 23, 2009 will receive a refund of the registration fee; cancellations on or before February 20, 2009 will receive a refund minus a $45 administrative fee.
 </li></ul>
 
 <ul><li>
 <h3><strong>Schedule</strong></h3>
-<a rel="swc:isSuperEventOf" href="http://code4lib.org/node/266#preconferences">Pre-conferences</a>: Monday, February 23, 2009
-<a rel="swc:hasProgramme" href="http://code4lib.org/conference/2009/schedule">Conference Program</a>: Tuesday, February 24, 8:00 am - Thursday, February 26, noon
-<a href="http://code4lib.org/conference/2009/breakouts">Breakout Sessions</a>
-<a href="http://code4lib.org/conference/2009/lightning">Lightning Talks</a>
+<a rel="swc:isSuperEventOf" href="/conference/2009/precon">Pre-conferences</a>: Monday, February 23, 2009
+<a rel="swc:hasProgramme" href="/conference/2009/schedule">Conference Program</a>: Tuesday, February 24, 8:00 am - Thursday, February 26, noon
+<a href="/conference/2009/breakout">Breakout Sessions</a>
+<a href="/conference/2009/lightning">Lightning Talks</a>
 </li></ul>
 
 <ul><li>
@@ -74,7 +74,7 @@ Providence is a compact, walkable city; once you arrive it&rsquo;s fairly easy t
 <ul>
 <li> MBTA public transportation: <a href="http://www.mbta.com/schedules_and_maps/bus/routes/?route=SL1">Silver Line bus</a> to South Station , leaves about every 10 minutes, $1.50; then get the commuter rail for $7.75. (see below) </li>
 
-<li>Commerical Bus:  1.5 hour <a href="http://www.peterpanbus.com/tickets/schedules-and-fares.php">Peter Pan bus</a> from Logan to Providence Kennedy Plaza leaves Logan every hour on the half hour. $22.   </li>
+<li>Commercial Bus:  1.5 hour <a href="http://www.peterpanbus.com/tickets/schedules-and-fares.php">Peter Pan bus</a> from Logan to Providence Kennedy Plaza leaves Logan every hour on the half hour. $22.   </li>
 <li> Taxi:  about $75 </li>
 </ul>
 </ul>
@@ -128,8 +128,8 @@ Thank you to all sponsors! We are looking for additional <a href="/conference/20
 
 <ul><li>
 <h3><strong>Gender Diversity and Minority Scholarships for Code4lib 2009</strong></h3>
-<a href="http://code4lib.org/node/269">Information on applying for the scholarships</a><br />
-<a href="http://code4lib.org/node/274">Code4lib 2009 Scholarship recipients</a>
+<a href="/conference/2009/scholarships">Information on applying for the scholarships</a><br />
+<a href="/conference/2009/recipients">Code4lib 2009 Scholarship recipients</a>
 </li>
 </ul>
 
