--- a/_posts/2009-05-08-libx-2-0.md
+++ b/_posts/2009-05-08-libx-2-0.md
@@ -12,6 +12,7 @@ categories:
 layout: post
 title: LibX 2.0
 created: 1241806586
+permalink: /conference/2009/back/
 ---
 <strong>Godmar Back</strong>, Virginia Tech
 
