2012 and 2013 conference links

--- a/_posts/2011-07-28-code4lib-2012.md
+++ b/_posts/2011-07-28-code4lib-2012.md
@@ -43,11 +43,11 @@ Transportation:
 Airport: <a href="http://www.portseattle.org/seatac/">Seattle-Tacoma International Airport (SEA)</a>
 Ground transportation to/from airport:
 <ul>
-<li><a href="http://www.soundtransit.org/">SoundTransit Link Light Rail and Bus Service</a></li>
-<li><a href="http://www.shuttleexpress.com/">Shuttle Express van service</a></li>
-<li>Taxi service available from the airport, approximate fare, $40</li>
-<li><a href="http://orbiscascade.org/index/code4lib-national-2012">For more Transportation information</a>
-<li><a href="http://wiki.code4lib.org/index.php/C4l2012_rideshare">Rideshare/Roomshare</a>
+    <li><a href="http://www.soundtransit.org/">SoundTransit Link Light Rail and Bus Service</a></li>
+    <li><a href="http://www.shuttleexpress.com/">Shuttle Express van service</a></li>
+    <li>Taxi service available from the airport, approximate fare, $40</li>
+    <li><a href="http://orbiscascade.org/index/code4lib-national-2012">For more Transportation information</a></li>
+    <li><a href="http://wiki.code4lib.org/index.php/C4l2012_rideshare">Rideshare/Roomshare</a></li>
 </ul>
 &nbsp;
 
@@ -64,7 +64,7 @@ Read the <a href="http://sites.google.com/site/code4lib2012seattle/">Seattle pro
 &nbsp;
 
 
-<strong><a href="http://code4lib.org/node/422">Sponsors:</a></strong>
+<strong><a href="/conference/2012/sponsors">Sponsors:</a></strong>
 Code4Lib thanks the following sponsors for their generous commitments:
 
 <strong>Platinum</strong> <a href="http://www.exlibrisgroup.com/category/Home">Ex Libris</a>; <a href="http://www.indiana.edu/">Indiana University</a>/<a href="http://kuali.org/">Kuali Foundation</a>; <a href="http://www.oclc.org">OCLC</a>; <a href="http://oregonstate.edu">Oregon State University</a>
@@ -75,7 +75,7 @@ Code4Lib thanks the following sponsors for their generous commitments:
 
 <strong>Bronze</strong> <a href="http://discoverygarden.ca/">Discovery Garden</a>; <a href="http://duraspace.org/">DuraSpace</a>; <a href="http://www.esilibrary.com">Equinox</a>; <a href="http://www.mendeley.com/">Mendeley</a>; <a href="http://www.princeton.edu/main/">Princeton University</a>
 
-For more information on conference sponsorship and sponsorship levels to to the <a href="http://code4lib.org/conference/2012/sponsorship">Code4Lib 2012 Sponsorship</a> page.
+For more information on conference sponsorship and sponsorship levels to to the <a href="/conference/2012/sponsorship">Code4Lib 2012 Sponsorship</a> page.
 &nbsp;
 
 
