--- a/_posts/2012-11-02-code4lib-2013.md
+++ b/_posts/2012-11-02-code4lib-2013.md
@@ -8,7 +8,7 @@ created: 1351895810
 ---
 <h2>The Basics</h2>
 <hr />
-<h3><a href="http://code4lib.org/conference/2013/schedule">Schedule (HTML)</a> | <a href="https://dl.dropbox.com/u/55136090/Code4Lib2013%20Program.pdf">Schedule (PDF)</a> | <a href="http://lanyrd.com/2013/c4l13/">Schedule (Lanyrd)</a></h3>
+<h3><a href="/conference/2013/schedule/">Schedule (HTML)</a> | <a href="https://dl.dropbox.com/u/55136090/Code4Lib2013%20Program.pdf">Schedule (PDF)</a> | <a href="http://lanyrd.com/2013/c4l13/">Schedule (Lanyrd)</a></h3>
 
 <hr />
 <h3>Streaming URL : <a href="http://bit.ly/c4l13-stream">http://bit.ly/c4l13-stream</a></h3>
@@ -21,29 +21,25 @@ created: 1351895810
 <strong>Where: UIC Forum</strong>: 725 W Roosevelt Rd. Chicago‚ IL 60608 &nbsp;<a href="https://maps.google.com/maps/place?q=uic+forum&hl=en&ftid=0x880e2cee34a5d635:0x70719a548f052f7f">Map</a>
 <p>Library of Health Science (preconference): 1750 West Polk Street Chicago, IL 60612 &nbsp; <a href="https://maps.google.com/maps/place?q=UIC+Library+of+Health+Science">Map</a></p>
 <p>Richard J. Daley Library (preconference): 801 S Morgan St, Chicago, IL 60607 &nbsp; <a href="https://maps.google.com/maps/place?q=uic+Daley+Library">Map</a></p>
-
-<p><a href="http://code4lib.org/conference/2013">more...</a></p>
 <!--break-->
 <hr/>
 
 <h2>Conference Info</h2>
 <h3>Registration</h3>
 <p>Registration for Code4lib 2013 <strong>was closed</strong> as of Thursday, January 31. (Registration was $160 and registration was capped at 400 people.)</p>
-<h3><a href="http://code4lib.org/conference/2013/schedule">Schedule (HTML)</a> | <a href="https://dl.dropbox.com/u/55136090/Code4Lib2013%20Program.pdf">Schedule (PDF)</a></h3>
+<h3><a href="/conference/2013/schedule/">Schedule (HTML)</a> | <a href="https://dl.dropbox.com/u/55136090/Code4Lib2013%20Program.pdf">Schedule (PDF)</a></h3>
 <p><a href="http://wiki.code4lib.org/index.php/2013_preconference_proposals">Pre-conference sign up</a></p>
 <p><a href="http://lanyrd.com/2013/c4l13/">Lanyrd page for the conference</a></p>
 <p><a href="http://lanyrd.com/2013/c4l13/save-to-calendar/">Save the schedule to your calendar</a></p>
 <p><a href="http://wiki.code4lib.org/index.php/2013_committees_sign-up_page">Volunteer sign up page</a></p>
 <p><a href="http://wiki.code4lib.org/index.php/2013_social_activities">Socialize</a></p>
-<p><a href="http://code4lib.org/conference/2013/scholarship">Gender Diversity & Minority Scholarships</a></p>
+<p><a href="/conference/2013/scholarship">Gender Diversity & Minority Scholarships</a></p>
 <h3><a href="http://wiki.code4lib.org/index.php/Main_Page#Code4Lib_2013_Conference">Conference Wiki</a></h3>
 <h3>New to code4lib?</h3>
 <p><a href="http://wiki.code4lib.org/index.php/2013_social_activities#Newcomer_Dinner.2C_Tuesday_2.2F12">Come to dinner on Tuesday</a></p>
 <p><a href="http://wiki.code4lib.org/index.php/How_to_hack_code4lib">Hacking code4lib</a></p>
 <p><a href="https://github.com/code4lib/antiharassment-policy/blob/master/code_of_conduct.md">Code of Conduct</a></p>
 <p><a href="http://wiki.code4lib.org/index.php/Zoia_or_the_Code4Lib_IRC_bot">IRCbot</a></p>
-
-
 
 <hr/>
 <h2>Hotel Info</h2>
@@ -68,35 +64,35 @@ created: 1351895810
   <li><a href="http://www.yellowcabchicago.com/">Yellow Cab</a>: <a href="tel:3128294222">(312) TAXICAB</a></li>
   <li><a href="http://www.chicagocarriagecab.com/">Chicago Carriage</a>: <a href="tel:3123262221">(312) 326-CAB1</a></li>
 </ul>
+
 <strong>Walking</strong>
 <p>If you're staying at the Crowne Plaza and fancy a walk, it will take you about 25 minutes. The stretch of Halsted Street south of the hotel goes through the heart of Chicago's lively <a href="http://www.greektownchicago.org/">Greektown</a> neighborhood.</p>
 <p>Standard safety procedures apply: be aware of your surroundings, don't walk alone at night or if you're uncomfortable, etc. </p>
 <hr />
 <h2>Sponsors</h2>
 <h3>Platinum</h3>
-<a href="http://www.oclc.org">OCLC</a>
+  <a href="http://www.oclc.org">OCLC</a>
 <h3>Gold</h3>
-<a href="http://www.orbiscascade.org/">Orbis Cascade Alliance </a>
-<a href="http://www.diglib.org/">Digital Library Federation (Scholarships)</a>
-<a href="http://oregonstate.edu">Oregon State University (and Scholarships)</a>
-<a href="http://psu.edu">Penn State University</a>
-<a href="http://ebsco.com">EBSCO</a>
+  <a href="http://www.orbiscascade.org/">Orbis Cascade Alliance </a>
+  <a href="http://www.diglib.org/">Digital Library Federation (Scholarships)</a>
+  <a href="http://oregonstate.edu">Oregon State University (and Scholarships)</a>
+  <a href="http://psu.edu">Penn State University</a>
+  <a href="http://ebsco.com">EBSCO</a>
 <h3>Silver</h3>
-<a href="http://www.indexdata.com/">IndexData</a>
-<a href="http://www.lyrasis.org/">LYRASIS</a>
+  <a href="http://www.indexdata.com/">IndexData</a>
+  <a href="http://www.lyrasis.org/">LYRASIS</a>
 <h3>Bronze</h3>
-<a href="http://projectblacklight.org/">Blacklight</a>
-<a href="http://library.princeton.edu/">Princeton University Library</a>
-<a href="http://www.ucsd.edu/">University of California San Diego Library</a>
-<a href="http://chillco.com/">The Cherry Hill Company</a>
-<a href="http://www.dom.edu/gslis">Dominican University Graduate School of Library and Information Science</a>
-<a href="http://code4lib.org/files/Code4Lib%20Sponsors.png"><img src="http://code4lib.org/files/Code4Lib%20Sponsors.png" width="300" height="400"></a>
-
+  <a href="http://projectblacklight.org/">Blacklight</a>
+  <a href="http://library.princeton.edu/">Princeton University Library</a>
+  <a href="http://www.ucsd.edu/">University of California San Diego Library</a>
+  <a href="http://chillco.com/">The Cherry Hill Company</a>
+  <a href="http://www.dom.edu/gslis">Dominican University Graduate School of Library and Information Science</a>
+  <a href="/files/Code4Lib%20Sponsors.png"><img src="/files/Code4Lib%20Sponsors.png" width="300" height="400"></a>
 <h3>Giveaways</h3>
-<a href="http://www.github.com">Github</a>
-<a href="http://www.jetbrains.com/"><img src="http://www.jetbrains.com/img/logos/logo_jetbrains.gif" width="100" height="50" alt="JetBrains" /></a>
+  <a href="http://www.github.com">Github</a>
+  <a href="http://www.jetbrains.com/"><img src="http://www.jetbrains.com/img/logos/logo_jetbrains.gif" width="100" height="50" alt="JetBrains" /></a>
 <h3>Developer Challenge</h3>
-<a href="http://fedora4lib.org/hack/">Hacking Fedora 4 (cash prizes)</a>
+  <a href="http://fedora4lib.org/hack/">Hacking Fedora 4 (cash prizes)</a>
 
 <hr/>
 <p><strong>Twitter</strong>: #c4l13</p>
