--- a/_posts/2013-09-30-code4lib-2014.md
+++ b/_posts/2013-09-30-code4lib-2014.md
@@ -26,15 +26,15 @@ Pre-conferences will be held Monday March 24, and the main conference on Tuesday
 
 <strong>See the <a href="/conference/2014/schedule">2014 Conference Schedule</a> for the full schedule.</strong>
 
-<a href="http://code4lib.org/node/493">Trip Reports</a> from the Code4Lib 2014 Conference Diversity Scholarship Recipients
+<a href="/conference/2014/trip-reports">Trip Reports</a> from the Code4Lib 2014 Conference Diversity Scholarship Recipients
 
 <h3>Keynote Speakers</h3>
 
-Ideas for keynote speakers were solicited and voted on. You can <a href="http://vote.code4lib.org/election/results/27">view the results</a> of the voting if you login. We are thrilled to have the two speakers who received the most votes: <b>Valerie Aurora</b>, the founder of the Ada Initiative, and <b>Sumana Harihareswara</b>, Engineering Community Manager, Wikimedia Foundation keynote this year. <a href="http://code4lib.org/node/490">See the announcement</a> for more information.
+Ideas for keynote speakers were solicited and voted on. You can <a href="http://vote.code4lib.org/election/results/27">view the results</a> of the voting if you login. We are thrilled to have the two speakers who received the most votes: <b>Valerie Aurora</b>, the founder of the Ada Initiative, and <b>Sumana Harihareswara</b>, Engineering Community Manager, Wikimedia Foundation keynote this year. <a href="/conference/2014/keynotes">See the announcement</a> for more information.
 
 <h3>Sponsors</h3>
 
-Financial contributions from <a href="http://www.code4lib.org/conference/2014/sponsors">Sponsors</a> account for more than 45% of the estimated cost of Code4Lib 2014.  We are very thankful for their support.  Please visit this <a href="http://www.code4lib.org/conference/2014/sponsors">link</a> to view all of our sponsors and to see descriptions of the Table Sponsors, new to Code4Lib conferences this year.
+Financial contributions from <a href="/conference/2014/sponsors">Sponsors</a> account for more than 45% of the estimated cost of Code4Lib 2014.  We are very thankful for their support.  Please visit this <a href="/conference/2014/sponsors">link</a> to view all of our sponsors and to see descriptions of the Table Sponsors, new to Code4Lib conferences this year.
 
 <h3>Hunt Library Reception (NCSU)</h3>
 
@@ -105,7 +105,7 @@ Phone: 1-919-233-3952
 
 The Triangle Transit Authority also provides a fairly direct <a href="http://www.gotriangle.org/transit/service-to-airport/">bus service</a> including complimentary wifi for $2 each way. Please check the schedule, as service times are limited and may not be available on Sunday.
 
-<a href="http://www.rdu.com/groundtrans/taxis.html">Taxi service</a> is easily available just outside baggage claim and is also commonly used.  
+<a href="http://www.rdu.com/groundtrans/taxis.html">Taxi service</a> is easily available just outside baggage claim and is also commonly used.
 
 For more details about the area, see the <a href="https://docs.google.com/a/ncsu.edu/document/d/1amxzn4xs26ILszZek5nIEEfd4qHNfLjp1BAc5CU5YKw/edit">hosting proposal</a>.
 
@@ -119,7 +119,7 @@ Registration for Code4Lib 2014 is now <strong>CLOSED</strong>. Please add your n
 
 If you are trying to register with a priority reservation (presenter, pre-conf organizer, scholarship recipient, platinum/gold sponsor, or table sponsor), please contact <a href="mailto:code4lib@concentra-cms.com" >CONCENTRA</a> directly for details on registering.
 
-Registration will close on Friday, February 14, or when the registration reaches 350 attendees, whichever comes first.  Registration cost is $165. Pre-conference registration is $5 per half-day session and $10 for a full day session.  
+Registration will close on Friday, February 14, or when the registration reaches 350 attendees, whichever comes first.  Registration cost is $165. Pre-conference registration is $5 per half-day session and $10 for a full day session.
 
 <h3>Prepared talks</h3>
 
@@ -128,7 +128,7 @@ Please read the <a href="http://wiki.code4lib.org/index.php/2014_Notes_for_Speak
 
 Voting is now closed for prepared talks. To see voting results, visit <a href="http://vote.code4lib.org/election/results/28">http://vote.code4lib.org/election/results/28</a>.  The 11 proposals with the most votes will be guaranteed a slot at the conference. Additional presentations have been selected by the Program Committee in an effort to ensure diversity in program content and presenters. Community votes weighed heavily in these decisions.
 
-All presenters have been notified as to whether their talk was accepted. A <a href="http://code4lib.org/conference/2014/schedule">program schedule</a> with talks slotted is available.
+All presenters have been notified as to whether their talk was accepted. A <a href="/conference/2014/schedule">program schedule</a> with talks slotted is available.
 
 <h3>Pre-conferences</h3>
 
